--- a/time-app/Docker-compose.yaml
+++ b/time-app/Docker-compose.yaml
@@ -3,9 +3,15 @@ version: "3"
 services:
   frontend:
     build: ./frontend
+    ports:
+      - "3333:3000"
   api:
     build: ./api
+    ports:
+      - "5555:5000"
   mysql:
     image: mysql
   adminer:
     image: adminer
+    ports:
+      - "8888:8080"
